@@ -166,6 +166,7 @@
 #include "platform.h"
 #include "openbsd-compat/openbsd-compat.h"
 #include "openbsd-compat/bsd-nextstep.h"
+#include "openbsd-compat/openssl-compat.h"
 
 #include "entropy.h"
 
